--- a/src/main/resources/templates/itineraire.html
+++ b/src/main/resources/templates/itineraire.html
@@ -20,8 +20,12 @@
 	</style>
 </head>
 <body id="body">
+    <FORM METHOD="GET" ACTION="http://localhost:8080/itineraireListeArrets">
 	
-	<div th:utext="${arrets}" />
+	<label>Lieu recherché : </label>
+	<input type="text" name="terme" id="lieu"></input>	
+	
+	</FORM>
 	
 	
 </body>
