--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -23,12 +23,13 @@
 <!-- Home -->
 <div data-role="page" id="page1">
 
-        <div data-role="header">
-            <a href="http://localhost:8080/" data-icon="home" data-transition="pop" data-theme="b" >Home</a>
-                    <h1>Projet Tisseo</h1>
-    </div>
+		<div data-role="header">
+			<a href="http://localhost:8080/" data-icon="home"
+				data-transition="pop" data-theme="b">Home</a>
+			<h1>Bye Univ</h1>
+		</div>
 
-    <div data-role="content">
+		<div data-role="content">
             <div class="ui-grid-solo ui-responsive">         <!-- grille pour l'image -->
                         <div class="ui-block-a">
                         
@@ -57,8 +58,6 @@
     </div><!--/content-->
 </div><!--/page-->
 
-<!-- 
- -->
 
 </body>
 </html>
