Fini c'est la fiesta

--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -33,7 +33,7 @@
             <div class="ui-grid-solo ui-responsive">         <!-- grille pour l'image -->
                         <div class="ui-block-a">
                         
-                                        <p align="center"> <img src="logo.jpg" alt="logo" /> </p>
+                                        <p align="center"> <img src="images/logo.png" alt="logo" /> </p>
                         </div>
                 </div>
        
